[gd_scene load_steps=4 format=3 uid="uid://bbrg7hbsagnf2"]

[ext_resource type="Script" path="res://src/index/index.gd" id="1_cbe8m"]
[ext_resource type="FontFile" uid="uid://djvhpjbf7msdr" path="res://Assets/Font/Dragon FREE.ttf" id="1_vw824"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7bnka"]
bg_color = Color(0.548963, 0.548963, 0.548962, 1)

[node name="Index" type="CanvasLayer"]
script = ExtResource("1_cbe8m")

[node name="style" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="root" type="VBoxContainer" parent="style"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="VBoxContainer" parent="style/root"]
layout_mode = 2

[node name="Principall" type="Label" parent="style/root/Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vw824")
theme_override_font_sizes/font_size = 100
text = "Ponehlyph
"
horizontal_alignment = 1

[node name="sub" type="Label" parent="style/root/Title"]
layout_mode = 2
text = "v0.1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Novo Projeto" type="Button" parent="style/root"]
layout_mode = 2
text = "Novo Projeto"

[node name="Config" type="Button" parent="style/root"]
layout_mode = 2
text = "Configurações"

[node name="Documentação" type="Button" parent="style/root"]
layout_mode = 2
text = "Documentação"

[node name="Github" type="Button" parent="style/root"]
layout_mode = 2
text = "Veja mais do projeto"

[node name="configurações" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Config" type="PanelContainer" parent="configurações"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_7bnka")

[node name="mensagem" type="VBoxContainer" parent="configurações/Config"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="configurações/Config/mensagem"]
layout_mode = 2

[node name="painel" type="HBoxContainer" parent="configurações/Config/mensagem/PanelContainer"]
layout_mode = 2

[node name="menu_name" type="Label" parent="configurações/Config/mensagem/PanelContainer/painel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Configurações"

[node name="exit" type="Button" parent="configurações/Config/mensagem/PanelContainer/painel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "X"

[node name="API_KEY" type="HBoxContainer" parent="configurações/Config/mensagem"]
layout_mode = 2

[node name="Api" type="Label" parent="configurações/Config/mensagem/API_KEY"]
layout_mode = 2
text = "Gemini Api Key: "

[node name="entrada" type="LineEdit" parent="configurações/Config/mensagem/API_KEY"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Cole sua Api key aqui"

[node name="LinkButton" type="LinkButton" parent="configurações/Config/mensagem"]
layout_mode = 2
theme_override_colors/font_color = Color(0.614484, 0.740551, 0.997025, 1)
theme_override_colors/font_hover_color = Color(0.748912, 0.662396, 7.70092e-07, 1)
text = "Gerar ApiKey"
uri = "https://ai.google.dev/"

[node name="Project" type="HBoxContainer" parent="configurações/Config/mensagem"]
layout_mode = 2

[node name="lbl_path" type="Label" parent="configurações/Config/mensagem/Project"]
layout_mode = 2
text = "Projeto:"

[node name="text_path" type="LineEdit" parent="configurações/Config/mensagem/Project"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Caminho para projeto"

[node name="btn_salvar" type="Button" parent="configurações/Config/mensagem"]
layout_mode = 2
text = "Salvar"

[connection signal="pressed" from="style/root/Novo Projeto" to="." method="_on_novo_projeto_pressed"]
[connection signal="pressed" from="style/root/Config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="style/root/Documentação" to="." method="_on_documentação_pressed"]
[connection signal="pressed" from="configurações/Config/mensagem/PanelContainer/painel/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="configurações/Config/mensagem/btn_salvar" to="." method="_on_btn_salvar_pressed"]
